--- a/src/config/whitestorks_seasons.json
+++ b/src/config/whitestorks_seasons.json
@@ -2,45 +2,115 @@
     {
         "action": "mdi-crosshairs-gps",
         "active": true,
-        "title": "2021 / 2022",
+        "title": "2022 / 2023",
         "turtledoves": [
             {
                 "active": true,
+                "color": "#7dc66c",
+                "data": "data/whitestorks/hans-2022_2023.csv",
+                "name": "Hans Albert",
+                "opacity": 1
+            },
+            {
+                "active": true,
+                "color": "#e62a28",
+                "data": "data/whitestorks/sonja-2022_2023.csv",
+                "name": "Sonja",
+                "opacity": 1
+            },
+            {
+                "active": true,
+                "color": "#91cbdf",
+                "data": "data/whitestorks/tini-2022_2023.csv",
+                "name": "Tini",
+                "opacity": 1
+            },
+            {
+                "active": true,
+                "color": "#b9140e",
+                "data": "data/whitestorks/eva-2022_2023.csv",
+                "name": "Eva",
+                "opacity": 1
+            },
+            {
+                "active": true,
+                "color": "#03b4bf",
+                "data": "data/whitestorks/else-2022_2023.csv",
+                "name": "Else",
+                "opacity": 1
+            },
+            {
+                "active": true,
+                "color": "#2c4a0c",
+                "data": "data/whitestorks/fritziii-2022_2023.csv",
+                "name": "Fritzi II",
+                "opacity": 1
+            },
+            {
+                "active": true,
+                "color": "#de2c12",
+                "data": "data/whitestorks/max-2022_2023.csv",
+                "name": "Max",
+                "opacity": 1
+            },
+            {
+                "active": true,
+                "color": "#f7af0f",
+                "data": "data/whitestorks/ole-2022_2023.csv",
+                "name": "Ole Einar",
+                "opacity": 1
+            },
+            {
+                "active": true,
+                "color": "#e35f00",
+                "data": "data/whitestorks/pauli-2022_2023.csv",
+                "name": "Pauli",
+                "opacity": 1
+            }
+        ]
+    },
+    {
+        "action": "mdi-crosshairs-gps",
+        "active": false,
+        "title": "2021 / 2022",
+        "turtledoves": [
+            {
+                "active": false,
                 "color": "#32ce2c",
                 "data": "data/whitestorks/gustav-2021_2022.csv",
                 "name": "Gustav",
                 "opacity": 1
             },
             {
-                "active": true,
+                "active": false,
                 "color": "#7dc66c",
                 "data": "data/whitestorks/hans-2021_2022.csv",
                 "name": "Hans Albert",
                 "opacity": 1
             },
             {
-                "active": true,
+                "active": false,
                 "color": "#b9140e",
                 "data": "data/whitestorks/eva-2021_2022.csv",
                 "name": "Eva",
                 "opacity": 1
             },
             {
-                "active": true,
+                "active": false,
                 "color": "#3636ca",
                 "data": "data/whitestorks/joe-2021_2022.csv",
                 "name": "Joe",
                 "opacity": 1
             },
             {
-                "active": true,
+                "active": false,
                 "color": "#91cbdf",
                 "data": "data/whitestorks/tini-2021_2022.csv",
                 "name": "Tini",
                 "opacity": 1
             },
             {
-                "active": true,
+                "active": false,
                 "color": "#e62a28",
                 "data": "data/whitestorks/sonja-2021_2022.csv",
                 "name": "Sonja",
