Neuen Branch mit den bisherigen Erweiterungen angelegt.

--- a/src/config/zwergschwan_seasons.json
+++ b/src/config/zwergschwan_seasons.json
@@ -9,266 +9,266 @@
         "active": true,
         "color": "#000000",
         "data": "data/zwergschwan/011T-2022.csv",
-        "name": "Simon (011T)",
+        "name": "Simon\n(011T)",
         "opacity": 1
       },
       {
         "active": true,
         "color": "#1CE6FF",
         "data": "data/zwergschwan/013T-2022.csv",
-        "name": "Clyde (013T)",
+        "name": "Clyde\n(013T)",
         "opacity": 1
       },
       {
         "active": true,
         "color": "#FF34FF",
         "data": "data/zwergschwan/014T-2022.csv",
-        "name": "Kai (014T)",
+        "name": "Kai\n(014T)",
         "opacity": 1
       },
       {
         "active": true,
         "color": "#FF4A46",
         "data": "data/zwergschwan/015T-2022.csv",
-        "name": "Axel (015T)",
+        "name": "Axel\n(015T)",
         "opacity": 1
       },
       {
         "active": true,
         "color": "#008941",
         "data": "data/zwergschwan/016T-2022.csv",
-        "name": "Anne (016T)",
+        "name": "Anne\n(016T)",
         "opacity": 1
       },
       {
         "active": true,
         "color": "#006FA6",
         "data": "data/zwergschwan/017T-2022.csv",
-        "name": "Jutta (017T)",
+        "name": "Jutta\n(017T)",
         "opacity": 1
       },
       {
         "active": true,
         "color": "#A30059",
         "data": "data/zwergschwan/018T-2022.csv",
-        "name": "Lina (018T)",
+        "name": "Lina\n(018T)",
         "opacity": 1
       },
       {
         "active": true,
         "color": "#FFDBE5",
         "data": "data/zwergschwan/019T-2022.csv",
-        "name": "Lisa (019T)",
+        "name": "Lisa\n(019T)",
         "opacity": 1
       },
       {
         "active": true,
         "color": "#7A4900",
         "data": "data/zwergschwan/020T-2022.csv",
-        "name": "Toni (020T)",
+        "name": "Toni\n(020T)",
         "opacity": 1
       },
       {
         "active": true,
         "color": "#0000A6",
         "data": "data/zwergschwan/021T-2022.csv",
-        "name": "Hannah (021T)",
+        "name": "Hannah\n(021T)",
         "opacity": 1
       },
       {
         "active": true,
         "color": "#63FFAC",
         "data": "data/zwergschwan/022T-2022.csv",
-        "name": "Joel (022T)",
+        "name": "Joel\n(022T)",
         "opacity": 1
       },
       {
         "active": true,
         "color": "#B79762",
         "data": "data/zwergschwan/023T-2022.csv",
-        "name": "Ljubow (023T)",
+        "name": "Ljubow\n(023T)",
         "opacity": 1
       },
       {
         "active": true,
         "color": "#004D43",
         "data": "data/zwergschwan/024T-2022.csv",
-        "name": "Yamal (024T)",
+        "name": "Yamal\n(024T)",
         "opacity": 1
       },
       {
         "active": true,
         "color": "#997D87",
         "data": "data/zwergschwan/026T-2022.csv",
-        "name": "Hans (026T)",
+        "name": "Hans\n(026T)",
         "opacity": 1
       },
       {
         "active": true,
         "color": "#809693",
         "data": "data/zwergschwan/028T-2022.csv",
-        "name": "Louise (028T)",
+        "name": "Louise\n(028T)",
         "opacity": 1
       },
       {
         "active": true,
         "color": "#DEAFD6",
         "data": "data/zwergschwan/029T-2022.csv",
-        "name": "Luis (029T)",
+        "name": "Luis\n(029T)",
         "opacity": 1
       },
       {
         "active": true,
         "color": "#1B4400",
         "data": "data/zwergschwan/030T-2022.csv",
-        "name": "Thor (030T)",
+        "name": "Thor\n(030T)",
         "opacity": 1
       },
       {
         "active": true,
         "color": "#4FC601",
         "data": "data/zwergschwan/031T-2022.csv",
-        "name": "Kopernikus (031T)",
+        "name": "Kopernikus\n(031T)",
         "opacity": 1
       },
       {
         "active": true,
         "color": "#3B5DFF",
         "data": "data/zwergschwan/032T-2022.csv",
-        "name": "Felix (032T)",
+        "name": "Felix\n(032T)",
         "opacity": 1
       },
       {
         "active": true,
         "color": "#4A3B53",
         "data": "data/zwergschwan/033T-2022.csv",
-        "name": "Freya (033T)",
+        "name": "Freya\n(033T)",
         "opacity": 1
       },
       {
         "active": true,
         "color": "#FF2F80",
         "data": "data/zwergschwan/034T-2022.csv",
-        "name": "Vincent (034T)",
+        "name": "Vincent\n(034T)",
         "opacity": 1
       },
       {
         "active": true,
         "color": "#61615A",
         "data": "data/zwergschwan/035T-2022.csv",
-        "name": "Bonnie (035T)",
+        "name": "Bonnie\n(035T)",
         "opacity": 1
       },
       {
         "active": true,
         "color": "#BA0900",
         "data": "data/zwergschwan/036T-2022.csv",
-        "name": "Elisabeth (036T)",
+        "name": "Elisabeth\n(036T)",
         "opacity": 1
       },
       {
         "active": true,
         "color": "#6B7900",
         "data": "data/zwergschwan/037T-2022.csv",
-        "name": "Natascha (037T)",
+        "name": "Natascha\n(037T)",
         "opacity": 1
       },
       {
         "active": true,
         "color": "#00C2A0",
         "data": "data/zwergschwan/038T-2022.csv",
-        "name": "Frauke (038T)",
+        "name": "Frauke\n(038T)",
         "opacity": 1
       },
       {
         "active": true,
         "color": "#FFAA92",
         "data": "data/zwergschwan/039T-2022.csv",
-        "name": "Irina (039T)",
+        "name": "Irina\n(039T)",
         "opacity": 1
       },
       {
         "active": true,
         "color": "#FF90C9",
         "data": "data/zwergschwan/040T-2022.csv",
-        "name": "Eileen (040T)",
+        "name": "Eileen\n(040T)",
         "opacity": 1
       },
       {
         "active": true,
         "color": "#B903AA",
         "data": "data/zwergschwan/041T-2022.csv",
-        "name": "Heintje (041T)",
+        "name": "Heintje\n(041T)",
         "opacity": 1
       },
       {
         "active": true,
         "color": "#D16100",
         "data": "data/zwergschwan/042T-2022.csv",
-        "name": "Albireo (042T)",
+        "name": "Albireo\n(042T)",
         "opacity": 1
       },
       {
         "active": true,
         "color": "#DDEFFF",
         "data": "data/zwergschwan/043T-2022.csv",
-        "name": "Doro (043T)",
+        "name": "Doro\n(043T)",
         "opacity": 1
       },
       {
         "active": true,
         "color": "#000035",
         "data": "data/zwergschwan/044T-2022.csv",
-        "name": "Rasputin (044T)",
+        "name": "Rasputin\n(044T)",
         "opacity": 1
       },
       {
         "active": true,
         "color": "#7B4F4B",
         "data": "data/zwergschwan/045T-2022.csv",
-        "name": "Tschaika (045T)",
+        "name": "Tschaika\n(045T)",
         "opacity": 1
       },
       {
         "active": true,
         "color": "#300018",
         "data": "data/zwergschwan/047T-2022.csv",
-        "name": "Deneb (047T)",
+        "name": "Deneb\n(047T)",
         "opacity": 1
       },
       {
         "active": true,
         "color": "#0AA6D8",
         "data": "data/zwergschwan/048T-2022.csv",
-        "name": "Nadeschda (048T)",
+        "name": "Nadeschda\n(048T)",
         "opacity": 1
       },
       {
         "active": true,
         "color": "#013349",
         "data": "data/zwergschwan/049T-2022.csv",
-        "name": "Thelma (049T)",
+        "name": "Thelma\n(049T)",
         "opacity": 1
       },
       {
         "active": true,
         "color": "#00846F",
         "data": "data/zwergschwan/050T-2022.csv",
-        "name": "Ragnar (050T)",
+        "name": "Ragnar\n(050T)",
         "opacity": 1
       },
       {
         "active": true,
         "color": "#5A0007",
         "data": "data/zwergschwan/051T-2022.csv",
-        "name": "Gagarin (051T)",
+        "name": "Gagarin\n(051T)",
         "opacity": 1
       },
       {
         "active": true,
         "color": "#A1C299",
         "data": "data/zwergschwan/052T-2022.csv",
-        "name": "Gerard (052T)",
+        "name": "Gerard\n(052T)",
         "opacity": 1
       }
     ]
