--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "leaflet": "^1.6.0",
     "leaflet-polylinedecorator": "^1.6.0",
     "vue": "^2.6.11",
+    "vue-datepicker-ui": "^2.3.0",
     "vuetify": "^2.2.29"
   },
   "devDependencies": {
